--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,4 @@
-spring:
+spring :
   application:
     name: big-event
 
@@ -17,3 +17,7 @@ spring:
         format_sql: true
 
     open-in-view: true
+
+logging:
+  level:
+    com: debug
