```yamlfeat(user-service):集成配置属性以验证用户名和密码长度
本次提交引入了一项新功能，通过读取application.yaml中的配置属性，对用户注册和更新操作中的用户名和密码长度进行验证。这确保了用户数据的一致性和安全性，同时也提高了系统的可配置性。

BREAKING CHANGE: 用户注册和更新操作现在需要满足最小长度要求，具体要求可以通过配置文件进行调整。
```

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,4 @@
-spring :
+spring  :
   application:
     name: big-event
 
@@ -18,6 +18,11 @@ spring :
 
     open-in-view: true
 
-logging:
+logging :
   level:
     com: debug
+
+resigned:
+  default-password: 123456
+  nickname-length : 2
+  password-length : 6
