--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,17 @@
     <description>bigevent</description>
     <url/>
     <licenses>
-        <license/>
+        <license>
+            <name>GNU General Public License v3.0</name>
+            <url>https://www.gnu.org/licenses/gpl-3.0.html</url>
+        </license>
     </licenses>
     <developers>
-        <developer/>
+        <developer>
+            <name>ovo307000</name>
+            <email>solowzl@outlook.com</email>
+            <url>www.github.com/ovo307000</url>
+        </developer>
     </developers>
     <scm>
         <connection/>
@@ -54,6 +61,11 @@
             <artifactId>annotations</artifactId>
             <version>24.1.0</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>3.3.2</version>
         </dependency>
     </dependencies>
 
