集成JWT令牌的生成与解析，添加相关配置和工具类
引入了JWT库以支持JWT令牌的生成与解析。更新了`application.yaml`以包含JWT配置。实现了`JWTProperties`类和`JWTUtil`类用于处理JWT相关的配置和操作。添加了`JWTUtilTest`以测试JWT相关功能。这些更改将支持项目的身份验证和授权流程。

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -46,3 +46,7 @@ register:
 
   email-formats                  : [ gmail.com, yahoo.com, outlook.com, hotmail.com ]
   picture-formats                : [ jpg, jpeg, png, gif, bmp, webp ]
+
+jwt     :
+  expiration-of-minutes: 1440
+  secret               : "ovo307000"
