"feat(jwt): 添加JWT算法配置及解析改进
引入JWT算法名称配置，以支持不同的签名算法。JWTUtil进行重构，添加解析JWT时的算法验证。同时，清理了application.yaml中的JWT配置格式。"

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -49,4 +49,5 @@ register:
 
 jwt     :
   expiration-of-minutes: 1440
-  secret               : "ovo307000"
+  secret  : "ovo307000"
+  key-type: "HS256"
