--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -48,6 +48,6 @@ register:
   picture-formats                : [ jpg, jpeg, png, gif, bmp, webp ]
 
 jwt     :
-  expiration-of-minutes: 1440
-  secret               : "ovo307000"
-  key-type             : "HS256"
+  expiration-of-minutes    : 1440
+  secret                   : "ovo307000"
+  algorithm-name-upper-case: "HS256"
