```markdownfeat(interceptor): 添加登录拦截器以验证JWT令牌- 配置JWT拦截器，用于检查请求的JWT令牌有效性。- 在`application.yaml`中添加JWT配置，包括启用拦截器和排除路径模式。 - 实现`InterceptorProperties`类，用于管理拦截器的属性。 - 实现`LoginInterceptor`类，用于处理JWT令牌的验证逻辑。 - 更新`UserController`，在用户登录成功时生成JWT令牌。 - 添加日志信息以增强用户更新操作的可追踪性。 - 配置`WebConfiguration`以注册JWT拦截器。
此次更新增强了安全性，确保只有经过身份验证的用户才能访问特定资源。
```

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,4 @@
-spring  :
+spring     :
   application:
     name: big-event
 
@@ -18,10 +18,10 @@ spring  :
 
     open-in-view: true
 
-logging :
+logging    :
   level:
     com: debug
-register:
+register   :
   max-username-length            : 100
   min-username-length            : 1
 
@@ -47,7 +47,11 @@ register:
   email-formats                  : [ gmail.com, yahoo.com, outlook.com, hotmail.com ]
   picture-formats                : [ jpg, jpeg, png, gif, bmp, webp ]
 
-jwt     :
+jwt        :
   secret                   : "ovo307000"
   algorithm-name-upper-case: "HS256"
   expiration-of-seconds    : 604800
+
+interceptor:
+  enable               : true
+  exclude-path-patterns: [ /user/login, /user/register ]
