```禁用拦截器以进行登录和注册流程
为了在用户登录和注册期间减少不必要的拦截，已将拦截器启用状态修改为“false”。这将优化这些特定操作的性能。
```

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -29,7 +29,7 @@ bigevent:
     expiration-of-seconds    : 604800
 
   interceptor:
-    enable               : true
+    enable               : false
     exclude-path-patterns: [ /user/login, /user/register ]
 
   user       :
