--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,11 +11,10 @@ spring  :
   jpa        :
     show-sql    : true
     hibernate   :
-      ddl-auto: update
+      ddl-auto: create-drop
     properties  :
       hibernate:
         format_sql: true
-
     open-in-view: true
 
 logging :
@@ -42,11 +41,11 @@ bigevent:
 
       max-password-length            : 100
       min-password-length            : 1
-      password-need-number           : false
-      password-need-uppercase        : false
+      is-password-need-number           : false
+      is-password-need-uppercase        : false
       password-regex                 : "^(?![0-9]+$)(?![a-zA-Z]+$)[0-9A-Za-z]{6,16}$"
 
-      password-need-special-character: false
+      is-password-need-special-character: false
       max-picture-size-of-bytes      : 10240000
       min-picture-size-of-bytes      : 256
 
@@ -57,4 +56,4 @@ bigevent:
       enable-picture-check           : true
 
       email-formats                  : [ gmail.com, yahoo.com, outlook.com, hotmail.com ]
-      picture-formats                : [ jpg, jpeg, png, gif, bmp, webp ]
+      picture-formats        : [ jpg, jpeg, png, gif, bmp, webp ]
