--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,6 +16,10 @@ spring  :
       hibernate:
         format_sql: true
     open-in-view: true
+  servlet    :
+    multipart:
+      max-file-size   : 100MB
+      max-request-size: 1000MB
 
 logging :
   level:
