--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,10 +16,16 @@ spring  :
       hibernate:
         format_sql: true
     open-in-view: true
-  servlet    :
+  servlet:
     multipart:
       max-file-size   : 100MB
       max-request-size: 1000MB
+
+  data   :
+    redis:
+      url : localhost
+      port: 6379
+      
 
 logging :
   level:
