fix(application.yaml): 修正redis配置格式
修正了application.yaml文件中的redis配置格式，以确保正确的连接URL格式。这个更改防止了由于配置格式错误导致的redis连接问题。

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -23,9 +23,7 @@ spring  :
 
   data   :
     redis:
-      url : localhost
-      port: 6379
-      
+      url: redis://localhost:6379
 
 logging :
   level:
